--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ deploy:
     branch: master
 after_deploy:
   - echo "Updating import map to point to new version of @hackathon/order-entry"
-  - curl -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@hackathon/order-entry","url":"https://spa-modules.nyc3.digitaloceanspaces.com/login/'$TRAVIS_COMMIT'/login.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json" --fail
+  - curl -u $DEPLOYER_USERNAME:$DEPLOYER_PASSWORD -d '{ "service":"@hackathon/order-entry","url":"https://spa-modules.nyc3.digitaloceanspaces.com/order-entry/'$TRAVIS_COMMIT'/order-entry.js" }' -X PATCH $DEPLOYER_HOST/services\?env=prod -H "Accept:application/json" -H "Content-Type:application/json" --fail
