--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ script:
   - npm run typescript
   - npm run build
   - echo "Folder name in Digital Ocean Spaces - $TRAVIS_COMMIT"
-  - mkdir -p dist/login/$TRAVIS_COMMIT
-  - mv dist/*.* dist/login/$TRAVIS_COMMIT/
+  - mkdir -p dist/order-entry/$TRAVIS_COMMIT
+  - mv dist/*.* dist/order-entry/$TRAVIS_COMMIT/
 deploy:
   provider: s3
   access_key_id: "$DIGITAL_OCEAN_SPACES_KEY_ID"
